--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -33,6 +33,13 @@ header a {
     border: none;
 }
 
+.route {
+    height: fit-content;
+    width: 1300px;
+    position: relative;
+    left: 300px;
+}
+
 @media screen and (max-width: 768px) {
     .head .ad {
         display: none;
